
message log
{
  optional uint32 magic = 1;
  optional string sender_id = 2;
  optional uint32 severity = 3;
  optional uint32 timestamp_sec = 4;
  optional uint32 timestamp_usec = 5;
  optional string message = 6;
}

message contract
{
  optional uint32 magic = 1;
  optional string path = 2;
  repeated uint32 types = 3 [packed=true];
  optional bool is_contiguous = 4;
  optional sint64 absolute_offset = 5;
	optional sint32 sleep = 6;
}

message block_range
{
  optional uint32 magic = 1;
  optional uint64 offset = 2;
  optional uint64 length = 3;
}

message result
{
  optional uint32 magic = 1;
  repeated block_range block_ranges = 2;
  optional string data_description = 3;
  optional string brief_data_description = 4;
  optional sint32 confidence = 5;
  optional string subcontractor_name = 6;
  repeated contract new_contracts = 7;
}

message report
{
  optional uint32 magic = 1;
  optional contract original_contract = 2;
  repeated result results = 3;
}

